Feat: 매장 리뷰 수 가져오는 기능 추가

--- a/naver_매장정보_크롤링(2).ipynb
+++ b/naver_매장정보_크롤링(2).ipynb
@@ -25,16 +25,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hare0\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\requests\\__init__.py:109: RequestsDependencyWarning: urllib3 (1.26.12) or chardet (5.2.0)/charset_normalizer (2.0.12) doesn't match a supported version!\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 웹 드라이버 설정\n",
     "from selenium import webdriver  \n",
@@ -67,18 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # webdriver_manager를 사용하여 ChromeDriver 다운로드 및 설정\n",
-    "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
+    "# driver = webdriver.Chrome(ChromeDriverManager().install())\n",
     "\n",
     "\n",
     "# # webdriver_manager를 사용하여 ChromeDriver 다운로드 및 설정\n",
-    "# import chromedriver_autoinstaller\n",
-    "# chromedriver_autoinstaller.install()\n",
-    "# driver = webdriver.Chrome()\n",
+    "import chromedriver_autoinstaller\n",
+    "chromedriver_autoinstaller.install()\n",
+    "driver = webdriver.Chrome()\n",
     "\n",
     "\n",
     "# 주소 이동\n",
@@ -89,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +345,7 @@
        "[8296 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +521,7 @@
        "5  204506.415174  444321.238711  서울특별시  강남구      역삼로 409,         분식을 품다   가능  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,23 +543,61 @@
     "category_name_list = []\n",
     "address_list = []\n",
     "menu_list = []\n",
-    "price_list = []\n"
+    "price_list = []\n",
+    "review_list = [] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'review_url' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    102\u001b[0m menu_list\u001b[38;5;241m.\u001b[39mappend(menu)\n\u001b[0;32m    103\u001b[0m price_list\u001b[38;5;241m.\u001b[39mappend(price)\n\u001b[1;32m--> 104\u001b[0m review_url_list\u001b[38;5;241m.\u001b[39mappend(\u001b[43mreview_url\u001b[49m)\n\u001b[0;32m    106\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m식당 이름:\u001b[39m\u001b[38;5;124m'\u001b[39m,restaurant_name)\n\u001b[0;32m    107\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m식당 카테고리:\u001b[39m\u001b[38;5;124m'\u001b[39m,category_name)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'review_url' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "식당 이름: 정식당\n",
+      "식당 카테고리: 한식\n",
+      "주소: 서울 강남구 강남대로114길 18 . 1층 정식당\n",
+      "대표 메뉴: 소불고기주물럭\n",
+      "가격: 16,000원\n",
+      "리뷰 :  9\n",
+      "-----------------------------\n",
+      "식당 이름: 채선당 샤브보트 강남역점\n",
+      "식당 카테고리: 샤브샤브\n",
+      "주소: 서울 강남구 강남대로 378 . 지상1층\n",
+      "대표 메뉴: 소고기 샤브샤브\n",
+      "가격: 12,900원\n",
+      "리뷰 :  71\n",
+      "-----------------------------\n",
+      "식당 이름: 수아당 갤러리아백화점 명품관 WEST점\n",
+      "식당 카테고리: 김밥\n",
+      "주소: 서울 강남구 압구정로 343\n",
+      "대표 메뉴: 비빔면\n",
+      "가격: 10,000원\n",
+      "리뷰 :  9\n",
+      "-----------------------------\n",
+      "식당 이름: 알찬한끼\n",
+      "식당 카테고리: 종합분식\n",
+      "주소: 서울 강남구 역삼로 204 삼환아르누보 지하1층 107호\n",
+      "대표 메뉴: 알찬도시락\n",
+      "가격: 5,000원\n",
+      "리뷰 :  0\n",
+      "-----------------------------\n",
+      "식당 이름: 세계관 삼성본점\n",
+      "식당 카테고리: 한식\n",
+      "주소: 서울 강남구 삼성로96길 11 2층\n",
+      "대표 메뉴: 투뿔 한우 곱도리탕\n",
+      "가격: 32,000원\n",
+      "리뷰 :  59\n",
+      "-----------------------------\n",
+      "식당 이름: 분식을품다 한티점\n",
+      "식당 카테고리: 종합분식\n",
+      "주소: 서울 강남구 역삼로 409 1층 102호\n",
+      "대표 메뉴: 쌀 떡볶이\n",
+      "가격: 5,900원\n",
+      "리뷰 :  28\n",
+      "-----------------------------\n"
      ]
     }
    ],
@@ -607,6 +636,13 @@
     "                menu = '메뉴없음'\n",
     "                price = \"가격없음\"\n",
     "            \n",
+    "            # 있으면 불러오고 없으면 없다고 ㄱㄱ\n",
+    "            if driver.find_elements(By.CLASS_NAME,'PXMot') :\n",
+    "                review = driver.find_element(By.CLASS_NAME,'PXMot').text\n",
+    "                review = int(review.replace('방문자리뷰 ',''))\n",
+    "            else : \n",
+    "                review=0\n",
+    "            \n",
     "        else : \n",
     "            # searchIframe 프레임 \n",
     "\n",
@@ -640,6 +676,11 @@
     "                else : \n",
     "                    menu = '메뉴없음'\n",
     "                    price = \"가격없음\"\n",
+    "                if driver.find_elements(By.CLASS_NAME,'PXMot') :\n",
+    "                    review = driver.find_element(By.CLASS_NAME,'PXMot').text\n",
+    "                    review = int(review.replace('방문자리뷰 ',''))\n",
+    "                else : \n",
+    "                    review = 0\n",
     "\n",
     "\n",
     "\n",
@@ -649,6 +690,7 @@
     "        address = '전처리필요'\n",
     "        menu = '메뉴없음'\n",
     "        price = \"가격없음\"\n",
+    "        review = 0\n",
     "        print(f\"에러 메시지: {str(e)}\")\n",
     "\n",
     "\n",
@@ -658,6 +700,7 @@
     "    address_list.append(address)\n",
     "    menu_list.append(menu)\n",
     "    price_list.append(price)\n",
+    "    review_list.append(review)\n",
     "\n",
     "    \n",
     "    print('식당 이름:',restaurant_name)\n",
@@ -665,12 +708,14 @@
     "    print('주소:',address)\n",
     "    print('대표 메뉴:',menu)\n",
     "    print('가격:',price)\n",
+    "    print('리뷰 : ',review)\n",
     "    print('-----------------------------')\n",
     "res_info_df = pd.DataFrame({'식당이름':restaurant_name_list ,\n",
     "                             '업태구분' :category_name_list ,\n",
     "                             '주소' :address_list ,\n",
     "                             '메뉴': menu_list,\n",
     "                             '가격':price_list,\n",
+    "                             '리뷰':review_list\n",
     "                             })\n",
     "\n",
     "    "
@@ -687,7 +732,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 71, 9, 0, 59, 28]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -716,63 +781,76 @@
        "      <th>주소</th>\n",
        "      <th>메뉴</th>\n",
        "      <th>가격</th>\n",
+       "      <th>리뷰</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>냉동고집 삼성점</td>\n",
-       "      <td>육류,고기요리</td>\n",
-       "      <td>서울 강남구 삼성로 517 1층 104호</td>\n",
-       "      <td>냉동삼겹살</td>\n",
-       "      <td>15,000원</td>\n",
+       "      <td>정식당</td>\n",
+       "      <td>한식</td>\n",
+       "      <td>서울 강남구 강남대로114길 18 . 1층 정식당</td>\n",
+       "      <td>소불고기주물럭</td>\n",
+       "      <td>16,000원</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>리하베스트</td>\n",
-       "      <td>카페,디저트</td>\n",
-       "      <td>서울 강남구 역삼로 220 1층</td>\n",
-       "      <td>메뉴없음</td>\n",
-       "      <td>가격없음</td>\n",
+       "      <td>채선당 샤브보트 강남역점</td>\n",
+       "      <td>샤브샤브</td>\n",
+       "      <td>서울 강남구 강남대로 378 . 지상1층</td>\n",
+       "      <td>소고기 샤브샤브</td>\n",
+       "      <td>12,900원</td>\n",
+       "      <td>71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>팡뮤제 베이커리</td>\n",
-       "      <td>베이커리</td>\n",
-       "      <td>경기 김포시 풍무로 128 웰라움퍼펙트시티 1층</td>\n",
-       "      <td>아메리카노</td>\n",
-       "      <td>4,800원</td>\n",
+       "      <td>수아당 갤러리아백화점 명품관 WEST점</td>\n",
+       "      <td>김밥</td>\n",
+       "      <td>서울 강남구 압구정로 343</td>\n",
+       "      <td>비빔면</td>\n",
+       "      <td>10,000원</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>만소당</td>\n",
-       "      <td>돈가스</td>\n",
-       "      <td>서울 강남구 논현로159길 10 104호</td>\n",
-       "      <td>돈까스</td>\n",
-       "      <td>13,000원</td>\n",
+       "      <td>알찬한끼</td>\n",
+       "      <td>종합분식</td>\n",
+       "      <td>서울 강남구 역삼로 204 삼환아르누보 지하1층 107호</td>\n",
+       "      <td>알찬도시락</td>\n",
+       "      <td>5,000원</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>꼬모 서울</td>\n",
-       "      <td>카페,디저트</td>\n",
-       "      <td>서울 강남구 봉은사로74길 19 1층</td>\n",
-       "      <td>이탈리안 티라미수</td>\n",
-       "      <td>6,500원</td>\n",
+       "      <td>세계관 삼성본점</td>\n",
+       "      <td>한식</td>\n",
+       "      <td>서울 강남구 삼성로96길 11 2층</td>\n",
+       "      <td>투뿔 한우 곱도리탕</td>\n",
+       "      <td>32,000원</td>\n",
+       "      <td>59</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       식당이름     업태구분                          주소         메뉴       가격\n",
-       "0  냉동고집 삼성점  육류,고기요리      서울 강남구 삼성로 517 1층 104호      냉동삼겹살  15,000원\n",
-       "1     리하베스트   카페,디저트           서울 강남구 역삼로 220 1층       메뉴없음     가격없음\n",
-       "2  팡뮤제 베이커리     베이커리  경기 김포시 풍무로 128 웰라움퍼펙트시티 1층      아메리카노   4,800원\n",
-       "3       만소당      돈가스      서울 강남구 논현로159길 10 104호        돈까스  13,000원\n",
-       "4     꼬모 서울   카페,디저트        서울 강남구 봉은사로74길 19 1층  이탈리안 티라미수   6,500원"
+       "                    식당이름  업태구분                               주소          메뉴  \\\n",
+       "0                    정식당    한식      서울 강남구 강남대로114길 18 . 1층 정식당     소불고기주물럭   \n",
+       "1          채선당 샤브보트 강남역점  샤브샤브           서울 강남구 강남대로 378 . 지상1층    소고기 샤브샤브   \n",
+       "2  수아당 갤러리아백화점 명품관 WEST점    김밥                  서울 강남구 압구정로 343         비빔면   \n",
+       "3                   알찬한끼  종합분식  서울 강남구 역삼로 204 삼환아르누보 지하1층 107호       알찬도시락   \n",
+       "4               세계관 삼성본점    한식              서울 강남구 삼성로96길 11 2층  투뿔 한우 곱도리탕   \n",
+       "\n",
+       "        가격  리뷰  \n",
+       "0  16,000원   9  \n",
+       "1  12,900원  71  \n",
+       "2  10,000원   9  \n",
+       "3   5,000원   0  \n",
+       "4  32,000원  59  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +1029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
