Feat : 리뷰 크롤링 코드 끝

--- a/naver_tag_review_크롤링.ipynb
+++ b/naver_tag_review_크롤링.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -452,6 +452,22 @@
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>논현로76길 12, 팡뮤제</td>\n",
+       "      <td>기타</td>\n",
+       "      <td>팡뮤제</td>\n",
+       "      <td>팡뮤제</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>논현로76길 12,</td>\n",
+       "      <td>서울특별시 강남구 역삼동 733</td>\n",
+       "      <td>서울특별시 강남구 논현로76길 12, 지상1층 (역삼동)</td>\n",
+       "      <td>203468.679845</td>\n",
+       "      <td>443861.874985</td>\n",
+       "      <td>가능</td>\n",
+       "      <td>영업/정상</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -462,27 +478,31 @@
        "1  언주로134길 11, 은서네 국내산 대패삼겹살    한식  은서네 국내산 대패삼겹살  은서네 국내산 대패삼겹살  서울특별시  강남구   \n",
        "2              삼성로 517, 냉동고집    한식           냉동고집       냉동고집 삼성점  서울특별시  강남구   \n",
        "3             역삼로 220, 리하베스트    기타          리하베스트          리하베스트  서울특별시  강남구   \n",
+       "4             논현로76길 12, 팡뮤제    기타            팡뮤제            팡뮤제  서울특별시  강남구   \n",
        "\n",
        "          상세주소                     소재지전체주소  \\\n",
        "0    강남대로 628,   서울특별시 강남구 신사동 502-1 비율라빌딩   \n",
        "1  언주로134길 11,        서울특별시 강남구 논현동 114-20   \n",
        "2     삼성로 517,  서울특별시 강남구 삼성동 144-14 채널리저브   \n",
        "3     역삼로 220,         서울특별시 강남구 역삼동 770-7   \n",
+       "4   논현로76길 12,           서울특별시 강남구 역삼동 733   \n",
        "\n",
        "                                     도로명전체주소        좌표정보(x)        좌표정보(y)  \\\n",
        "0       서울특별시 강남구 강남대로 628, 비율라빌딩 지상1층 (신사동)  201653.207483  446184.429131   \n",
        "1           서울특별시 강남구 언주로134길 11, 지하1층 (논현동)  203159.048808  446075.348000   \n",
        "2  서울특별시 강남구 삼성로 517, 지상1층 104호 (삼성동, 채널리저브)  204828.180350  445089.672895   \n",
        "3              서울특별시 강남구 역삼로 220, 지상1층 (역삼동)  203571.552291  443810.299558   \n",
+       "4            서울특별시 강남구 논현로76길 12, 지상1층 (역삼동)  203468.679845  443861.874985   \n",
        "\n",
        "  검색여부  영업상태명  \n",
        "0   가능  영업/정상  \n",
        "1   가능  영업/정상  \n",
        "2   가능  영업/정상  \n",
-       "3   가능  영업/정상  "
+       "3   가능  영업/정상  \n",
+       "4   가능  영업/정상  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +510,7 @@
    "source": [
     "# 일부 테스트\n",
     "res_df_test = res_df.copy()\n",
-    "new_res_df_test = res_df_test.iloc[10:14].copy()\n",
+    "new_res_df_test = res_df_test.iloc[10:15].copy()\n",
     "new_res_df_test.reset_index(drop=True, inplace=True)\n",
     "new_res_df_test"
    ]
@@ -504,15 +524,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "끝\n"
+      "Message: stale element reference: stale element not found\n",
+      "  (Session info: chrome=122.0.6261.69)\n",
+      "\n",
+      "끝\n",
+      "Message: \n",
+      "\n",
+      "Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\".fvwqf\"}\n",
+      "  (Session info: chrome=122.0.6261.69)\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>매장명</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>content</th>\n",
+       "      <th>date</th>\n",
+       "      <th>revisit</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>강남대로 628, 만수정</td>\n",
+       "      <td>su****</td>\n",
+       "      <td>직접 수조에서 꺼낸 장어라 그런지 정말 싱싱하고 맛있어요 노릇노릇 잘 구워주셔서 편...</td>\n",
+       "      <td>1.24.수</td>\n",
+       "      <td>1번째 방문</td>\n",
+       "      <td>친절해요</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>강남대로 628, 만수정</td>\n",
+       "      <td>블루블랙96</td>\n",
+       "      <td>신사역 6번출구와 신사스퀘어 사이에 있는 만수정!\\n우연히 들린곳에서 맛있는 장어탕...</td>\n",
+       "      <td>23.12.27.수</td>\n",
+       "      <td>1번째 방문</td>\n",
+       "      <td>단체모임 하기 좋아요</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>강남대로 628, 만수정</td>\n",
+       "      <td>남탕70</td>\n",
+       "      <td>장어가 질이 너무 좋고 맛있어요!! 직원분이 딱 좋게 구워주시고 친절하셔서 유쾌하게...</td>\n",
+       "      <td>1.21.일</td>\n",
+       "      <td>1번째 방문</td>\n",
+       "      <td>음식이 맛있어요</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>강남대로 628, 만수정</td>\n",
+       "      <td>esm****</td>\n",
+       "      <td>사장님이랑 일하시는 직원분들이 너무 친절하게 대해주세요! 전반적으로 재료들도 신선하...</td>\n",
+       "      <td>23.12.27.수</td>\n",
+       "      <td>1번째 방문</td>\n",
+       "      <td>음식이 맛있어요</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>강남대로 628, 만수정</td>\n",
+       "      <td>Lana6191</td>\n",
+       "      <td>평소 장어를 좋아해서 이곳저곳 다 다녀봤는데 만수정 장어가 제일 맛있고 취향저격 이...</td>\n",
+       "      <td>23.12.13.수</td>\n",
+       "      <td>1번째 방문</td>\n",
+       "      <td>음식이 맛있어요</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>논현로76길 12, 팡뮤제</td>\n",
+       "      <td>나홀로탐방</td>\n",
+       "      <td>오랬만에 방문</td>\n",
+       "      <td>2.24.토</td>\n",
+       "      <td>7번째 방문</td>\n",
+       "      <td>빵이 맛있어요</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>논현로76길 12, 팡뮤제</td>\n",
+       "      <td>최혜경36</td>\n",
+       "      <td>조아요\\n주차장 그지같아요\\n나오는데 30분걸렸슴</td>\n",
+       "      <td>23.12.25.월</td>\n",
+       "      <td>1번째 방문</td>\n",
+       "      <td>빵이 맛있어요</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>논현로76길 12, 팡뮤제</td>\n",
+       "      <td>OK2747</td>\n",
+       "      <td>빵맛집이라더니 빵이 정말 다 맛잇어요!!! 커피도 맛잇구 키즈존이도 분리되어잇어서 ...</td>\n",
+       "      <td>23.10.11.수</td>\n",
+       "      <td>1번째 방문</td>\n",
+       "      <td>친절해요</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>논현로76길 12, 팡뮤제</td>\n",
+       "      <td>jjmmjj1229</td>\n",
+       "      <td></td>\n",
+       "      <td>2.18.일</td>\n",
+       "      <td>1번째 방문</td>\n",
+       "      <td>빵이 맛있어요</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>논현로76길 12, 팡뮤제</td>\n",
+       "      <td>블루하와이치치</td>\n",
+       "      <td>많이 달지 않은 카페라떼와 퀸아망\\n조합 좋아요♡</td>\n",
+       "      <td>1.25.목</td>\n",
+       "      <td>3번째 방문</td>\n",
+       "      <td>빵이 맛있어요</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>81 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               매장명     user_id  \\\n",
+       "0    강남대로 628, 만수정      su****   \n",
+       "1    강남대로 628, 만수정      블루블랙96   \n",
+       "2    강남대로 628, 만수정        남탕70   \n",
+       "3    강남대로 628, 만수정     esm****   \n",
+       "4    강남대로 628, 만수정    Lana6191   \n",
+       "..             ...         ...   \n",
+       "76  논현로76길 12, 팡뮤제       나홀로탐방   \n",
+       "77  논현로76길 12, 팡뮤제       최혜경36   \n",
+       "78  논현로76길 12, 팡뮤제      OK2747   \n",
+       "79  논현로76길 12, 팡뮤제  jjmmjj1229   \n",
+       "80  논현로76길 12, 팡뮤제     블루하와이치치   \n",
+       "\n",
+       "                                              content        date revisit  \\\n",
+       "0   직접 수조에서 꺼낸 장어라 그런지 정말 싱싱하고 맛있어요 노릇노릇 잘 구워주셔서 편...      1.24.수  1번째 방문   \n",
+       "1   신사역 6번출구와 신사스퀘어 사이에 있는 만수정!\\n우연히 들린곳에서 맛있는 장어탕...  23.12.27.수  1번째 방문   \n",
+       "2   장어가 질이 너무 좋고 맛있어요!! 직원분이 딱 좋게 구워주시고 친절하셔서 유쾌하게...      1.21.일  1번째 방문   \n",
+       "3   사장님이랑 일하시는 직원분들이 너무 친절하게 대해주세요! 전반적으로 재료들도 신선하...  23.12.27.수  1번째 방문   \n",
+       "4   평소 장어를 좋아해서 이곳저곳 다 다녀봤는데 만수정 장어가 제일 맛있고 취향저격 이...  23.12.13.수  1번째 방문   \n",
+       "..                                                ...         ...     ...   \n",
+       "76                                            오랬만에 방문      2.24.토  7번째 방문   \n",
+       "77                        조아요\\n주차장 그지같아요\\n나오는데 30분걸렸슴  23.12.25.월  1번째 방문   \n",
+       "78  빵맛집이라더니 빵이 정말 다 맛잇어요!!! 커피도 맛잇구 키즈존이도 분리되어잇어서 ...  23.10.11.수  1번째 방문   \n",
+       "79                                                         2.18.일  1번째 방문   \n",
+       "80                        많이 달지 않은 카페라떼와 퀸아망\\n조합 좋아요♡      1.25.목  3번째 방문   \n",
+       "\n",
+       "            tag  \n",
+       "0          친절해요  \n",
+       "1   단체모임 하기 좋아요  \n",
+       "2      음식이 맛있어요  \n",
+       "3      음식이 맛있어요  \n",
+       "4      음식이 맛있어요  \n",
+       "..          ...  \n",
+       "76      빵이 맛있어요  \n",
+       "77      빵이 맛있어요  \n",
+       "78         친절해요  \n",
+       "79      빵이 맛있어요  \n",
+       "80      빵이 맛있어요  \n",
+       "\n",
+       "[81 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -558,92 +767,19 @@
     "\n",
     "\n",
     "# ---------------- 여기가 수정 -------------------------\n",
-    "# 현재 페이지 URL 가져오기\n",
-    "current_url = driver.current_url\n",
-    "\n",
-    "# 리뷰 url로 이동 \n",
-    "modified_url = current_url.replace('/home', '/review/visitor')\n",
-    "driver.get(modified_url)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://map.naver.com/p/search/%EA%B0%95%EB%82%A8%EB%8C%80%EB%A1%9C%20628,%20%EB%A7%8C%EC%88%98%EC%A0%95/place/1924056988?isCorrectAnswer=true'"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "current_url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 빈 리스트 생성\n",
-    "user_id_list = []\n",
-    "content_list = []\n",
-    "date_list = []  \n",
-    "revisit_list = []\n",
-    "tag_category_name_list = []\n",
-    "restaurant_name_list = []\n",
-    "review_category_name_list = []\n",
-    "\n",
-    "# 지선\n",
-    "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
-    "\n",
-    "for i in range(0,len(res_df)):\n",
-    "  \n",
-    "    name = res_df['검색어'][i]\n",
-    "    driver.get('https://map.naver.com/p/search/{}'.format(name))\n",
-    "\n",
-    "    time.sleep(3)  \n",
-    "    try :\n",
-    "        if driver.find_elements(By.ID,'entryIframe') :\n",
-    "            entryIframe = driver.find_element(By.ID,'entryIframe')\n",
-    "            driver.switch_to.frame(entryIframe)\n",
-    "    except :\n",
-    "        pass \n",
-    "\n",
-    "    html = driver.page_source\n",
-    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    # 현재 페이지 URL 가져오기\n",
+    "    current_url = driver.current_url\n",
     "\n",
     "    try : \n",
-    "        # '리뷰' 탭의 href 속성 가져오기\n",
-    "        review_tab_href = soup.find('a', {'class': 'tpj9w _tab-menu', 'aria-selected': 'true'}).get('href')\n",
-    "        review_url = 'https://pcmap.place.naver.com'+review_tab_href\n",
+    "        # 리뷰 url로 이동 \n",
+    "        modified_url = current_url.replace('/home', '/review/visitor')\n",
+    "        driver.get(modified_url)\n",
+    "    except :\n",
+    "        continue\n",
     "\n",
-    "        driver.get(review_url)\n",
-    "        time.sleep(2.2)  \n",
-    "\n",
-    "        for _ in range(4):\n",
-    "        # 스크롤을 위한 JavaScript 코드 실행\n",
-    "            driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
-    "            time.sleep(2) \n",
-    "\n",
-    "        # HTML 추출\n",
-    "        html = driver.page_source\n",
-    "        soup = BeautifulSoup(html, 'html.parser')\n",
-    "        items = soup.select('ul.uNsI9 li.nbD78, ul.uNsI9 li.nbD78.Xcpsu')\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        \n",
-    "# url = 'https://m.place.naver.com/restaurant/13149660/home?entry=pll'\n",
-    "\n",
+    "    \n",
+    "# --------------------- 수정 중 ---------------------------------------------\n",
+    "    \n",
     "    # 리뷰 스크래핑 시작\n",
     "    try:\n",
     "        # 스크롤\n",
@@ -651,15 +787,10 @@
     "            driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
     "            time.sleep(2) \n",
     "            \n",
-    "            # 여기 클릭에서 에러나요 --------------------------------------\n",
     "            # 'TeItc' 클래스를 가진 요소가 클릭 가능할 때까지 기다리고, 보이도록 스크롤\n",
     "            button = WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.CLASS_NAME, 'TeItc')))\n",
     "            driver.execute_script(\"arguments[0].scrollIntoView();\", button)\n",
     "            button.click()\n",
-    "\n",
-    "            # button = driver.find_element_by_class_name('TeItc')\n",
-    "            # button.click()\n",
-    "            # time.sleep(1)\n",
     "\n",
     "            # 더보기 클릭\n",
     "            button = driver.find_element_by_class_name('fvwqf')\n",
@@ -694,12 +825,12 @@
     "            time.sleep(0.06)\n",
     "\n",
     "            # Append data to lists\n",
+    "            restaurant_name_list.append(name)\n",
     "            user_id_list.append(user_id)\n",
     "            content_list.append(content)\n",
     "            review_category_name_list.append(tag)\n",
     "            date_list.append(date)\n",
     "            revisit_list.append(revisit)    \n",
-    "\n",
     "\n",
     "    except Exception as e:\n",
     "        print(e)\n",
@@ -709,7 +840,7 @@
     "\n",
     "    # Create a DataFrame\n",
     "    review_data_list = {\n",
-    "        #'매장명': restaurant_name_list,\n",
+    "        '매장명': restaurant_name_list,\n",
     "        'user_id': user_id_list,\n",
     "        'content': content_list,\n",
     "        'date': date_list,\n",
@@ -717,13 +848,30 @@
     "        'tag': review_category_name_list\n",
     "    }\n",
     "\n",
-    "        # except :\n",
-    "        #     pass\n",
-    "\n",
     "# 태그 데이터 프레임 완성\n",
     "review_result_df = pd.DataFrame(review_data_list)\n",
     "\n",
-    "review_result_df"
+    "review_result_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://map.naver.com/p/search/%EA%B0%95%EB%82%A8%EB%8C%80%EB%A1%9C%20628,%20%EB%A7%8C%EC%88%98%EC%A0%95/place/1924056988?isCorrectAnswer=true'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_url"
    ]
   },
   {
