Fix : 리뷰 더 보기 만들어야함

--- a/공공데이터_API.ipynb
+++ b/공공데이터_API.ipynb
@@ -247,6 +247,32 @@
     "else:\n",
     "    print(\"API 호출 중 에러 발생\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2750.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = '2,750'\n",
+    "try :\n",
+    "    a = a.replace(',','')\n",
+    "    a = float(a)\n",
+    "except :\n",
+    "    a= float(a)\n",
+    "a"
+   ]
   }
  ],
  "metadata": {
